# QDE

./: .gitignore  CMakeLists.txt  README  build.sh
include/QdeCore/: Application
qde-core/: CMakeLists.txt
qde-core/resources/: CMakeLists.txt
qde-core/src/: CMakeLists.txt  qde_core_ns.h
qde-core/src/application/: application.cpp  application.h
qde-session/: CMakeLists.txt
qde-session/resources/: CMakeLists.txt
qde-session/src/: CMakeLists.txt  application.cpp  application.h  main.cpp
